# dumpster_fire_engine

./: .gitattributes  AGENTS.md  CLAUDE.md  Cargo.toml  REVIEW.md  Untitled-1.json  build.rs
arch/: arena_iteration.rs  comps.rs  isolated_functions.rs
assets/models/: PolygonalMindLogo_Art.glb
assets/shaders/: demo_doubler.comp.glsl  demo_doubler.spv  forward_lit.frag  forward_lit.frag.spv  forward_lit.vert  forward_lit.vert.spv  gaussian_splat.frag  gaussian_splat.frag.spv  gaussian_splat.vert  gaussian_splat.vert.spv  instance_transforms.comp  morph_blend.comp  morph_blend.comp.glsl.spv  morph_blend.comp.spv  skin_palette.comp.glsl  skin_palette.comp.spv  skinned_forward_lit.vert  skinned_forward_lit.vert.spv  splat_billboard.comp.glsl  splat_billboard.comp.glsl.spv  splat_sort.comp.glsl  splat_sort.comp.glsl.spv  triangle.frag  triangle.vert  triangle.vert.spv
benches/: arena_iteration.rs  arena_micro.rs  asset_pipeline.rs  bt_nodes.rs  cache_ops.rs  component_storage.rs  condition_eval.rs  effect_dispatch.rs  event_dispatch.rs  game_tick.rs  iai_critical.rs  mesh_pipeline.rs  play_paths.rs  script_hot_reload.rs  script_pipeline.rs  script_runtime.rs  transform_kernels.rs
crates/forge_gltf/: Cargo.toml
crates/forge_gltf/benches/: codec_throughput.rs
crates/forge_gltf/examples/: inspect.rs
crates/forge_gltf/src/: animation.rs  asset.rs  builder.rs  camera.rs  cpu.rs  error.rs  lib.rs  light.rs  material.rs  mesh.rs  pipeline.rs  pose.rs  preprocess.rs  scene.rs  skin.rs  splat.rs  texture.rs
crates/forge_gltf/src/codec/: astc.rs  basisu_etc1s.rs  basisu_uastc.rs  bc.rs  draco.rs  etc2.rs  extensions.rs  ktx2.rs  meshopt.rs  mikktspace.rs  mod.rs  sparse.rs  webp.rs  zstd.rs
crates/forge_gltf/tests/: asset_roundtrip.rs
crates/lang_frontend/: Cargo.toml
crates/lang_frontend/src/: ast.rs  hir.rs  lexer.rs  lib.rs  parser.rs  sema.rs
crates/lang_frontend/tests/scripts/: guard.lang
src/: lib.rs  main.rs  physics.rs  util.rs
src/forge_master/: cpu_features.rs  forge.rs  frame.rs  ingot.rs  master.rs  mod.rs  ore.rs
src/render/: app.rs  camera.rs  compute_dispatch.rs  mod.rs  render.rs  vulkan.rs  window.rs
src/render/factory_master/: factory.rs  master.rs  mod.rs  proto.rs
src/resource_manager/: component.rs  gltf_driver.rs  gltf_scene.rs  manager.rs  mod.rs
src/resource_manager/asset_manager/: asset.rs  deliver.rs  fetch.rs  gltf_loader.rs  mod.rs  pipe.rs  pipeline.rs  send.rs
src/resource_manager/event_manager/: mod.rs  object_loader.rs  play.rs  scene.rs  script.rs  script_abi.rs  script_client.rs  script_ipc.rs
src/resource_manager/world_manager/: level.rs  mod.rs  stage.rs  world.rs
tests/: render_animated_glb.rs  scripting_end_to_end.rs  scripting_hot_reload.rs
tools/langc/: Cargo.toml  build.rs
tools/langc/src/: codegen.rs  engine_api.rs  lib.rs  link.rs  main.rs
tools/langcd/: Cargo.toml
tools/langcd/src/: main.rs  watch.rs
