[package]
name = "dumpster_fire_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
thin-vec = "0.2"
glam     = "0.29"
rayon    = "1"
ash = "0.38.0"
ash-window = "0.13"
winit = "0.30.13"
gltf = "1"

[dev-dependencies]
slotmap = "1"
criterion = "0.5"
divan = "0.1"
iai-callgrind = "0.16.1"

[[bench]]
name = "component_storage"
harness = false


[[bench]]
name = "game_tick"
harness = false

[[bench]]
name = "arena_micro"
harness = false

[[bench]]
name = "transform_kernels"
harness = false

[[bench]]
name = "condition_eval"
harness = false

[[bench]]
name = "bt_nodes"
harness = false

[[bench]]
name = "effect_dispatch"
harness = false

[[bench]]
name = "play_paths"
harness = false

[[bench]]
name = "cache_ops"
harness = false

[[bench]]
name = "asset_pipeline"
harness = false

[[bench]]
name = "event_dispatch"
harness = false

[[bench]]
name = "iai_critical"
harness = false

[[bin]]
name = "hello_triangle"
path = "src/bin/hello_triangle.rs"

[[bin]]
name = "hello_gltf"
path = "src/bin/hello_gltf.rs"

[profile.release]
lto           = "fat"
codegen-units = 1

[profile.bench]
lto           = "fat"
codegen-units = 1
