[workspace]
members = [
    ".",
    "crates/forge_gltf",
    "crates/lang_frontend",
    "tools/langc",
    "tools/langcd",
]
resolver = "2"

[package]
name = "dumpster_fire_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
thin-vec   = "0.2"
glam       = "0.29"
rayon      = "1"
ash        = "0.38.0"
ash-window = "0.13"
winit      = "0.30.13"
gltf = { version = "1.4", default-features = false, features = [
    "import",
    "KHR_lights_punctual",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_volume",
    "KHR_materials_unlit",
    "KHR_materials_emissive_strength",
    "KHR_texture_transform",
    "extras",
    "extensions",
    "names",
    "utils",
] }
mikktspace = "0.3"
object     = { version = "0.36", default-features = false, features = ["read", "std"] }
forge_gltf = { path = "crates/forge_gltf" }

[target.'cfg(unix)'.dependencies]
# Used for UnixStream ancillary-fd transport (SCM_RIGHTS) when the engine
# connects to langcd.  Std's UnixStream alone cannot pass fds; rustix is the
# minimum-viable path that doesn't require reimplementing sendmsg/recvmsg
# ancillary data parsing by hand.
rustix = { version = "0.38", features = ["net", "fs"] }

[dev-dependencies]
slotmap       = "1"
criterion     = "0.5"
divan         = "0.1"
iai-callgrind = "0.16.1"
lang_frontend = { path = "crates/lang_frontend" }
langc         = { path = "tools/langc" }

[[bench]]
name = "component_storage"
harness = false


[[bench]]
name = "game_tick"
harness = false

[[bench]]
name = "arena_micro"
harness = false

[[bench]]
name = "transform_kernels"
harness = false

[[bench]]
name = "condition_eval"
harness = false

[[bench]]
name = "bt_nodes"
harness = false

[[bench]]
name = "effect_dispatch"
harness = false

[[bench]]
name = "play_paths"
harness = false

[[bench]]
name = "cache_ops"
harness = false

[[bench]]
name = "asset_pipeline"
harness = false

[[bench]]
name = "event_dispatch"
harness = false

[[bench]]
name = "iai_critical"
harness = false

[[bench]]
name = "mesh_pipeline"
harness = false

[[bench]]
name = "script_pipeline"
harness = false

[[bench]]
name = "script_runtime"
harness = false

[[bench]]
name = "script_hot_reload"
harness = false

[[bin]]
name = "hello_triangle"
path = "src/bin/hello_triangle.rs"

[[bin]]
name = "hello_gltf"
path = "src/bin/hello_gltf.rs"

[[bin]]
name = "game"
path = "src/bin/game.rs"

[[bin]]
name = "render_demo"
path = "src/bin/render_demo.rs"

[profile.release]
lto           = "fat"
codegen-units = 1

[profile.bench]
lto           = "fat"
codegen-units = 1
